// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shelf renders correctly 1`] = `
<Shelf>
  <div
    className="shelf"
    onKeyDown={[Function]}
    role="menu"
    tabIndex="-1"
  >
    <Header
      text="books"
    >
      <header
        className="kai-header"
      >
        <h1
          className="h1"
          data-l10n-id="books"
        />
      </header>
    </Header>
    <div
      className="shelf-content"
    >
      <Empty
        text="no-books"
      >
        <div
          className="kai-empty"
        >
          <p
            className="kai-empty-text"
            data-l10n-id="no-books"
          />
        </div>
      </Empty>
    </div>
    <SoftKey
      left="open"
    >
      <form
        className="kai-softkey visible"
        data-type="action"
      >
        <Button
          content="open"
          pos="left"
        >
          <button
            className="kai-softkey-btn"
            data-l10n-id="open"
          />
        </Button>
        <Button
          content=""
          pos="center"
        >
          <button
            className="kai-softkey-btn"
          />
        </Button>
        <Button
          content=""
          pos="right"
        >
          <button
            className="kai-softkey-btn"
          />
        </Button>
      </form>
    </SoftKey>
  </div>
</Shelf>
`;

exports[`Shelf show list when book.length not 0 1`] = `
<Shelf>
  <div
    className="shelf"
    onKeyDown={[Function]}
    role="menu"
    tabIndex="-1"
  >
    <Header
      text="books"
    >
      <header
        className="kai-header"
      >
        <h1
          className="h1"
          data-l10n-id="books"
        />
      </header>
    </Header>
    <div
      className="shelf-content"
    />
    <SoftKey
      left="open"
    >
      <form
        className="kai-softkey visible"
        data-type="action"
      >
        <Button
          content="open"
          pos="left"
        >
          <button
            className="kai-softkey-btn"
            data-l10n-id="open"
          />
        </Button>
        <Button
          content=""
          pos="center"
        >
          <button
            className="kai-softkey-btn"
          />
        </Button>
        <Button
          content=""
          pos="right"
        >
          <button
            className="kai-softkey-btn"
          />
        </Button>
      </form>
    </SoftKey>
  </div>
</Shelf>
`;
